# Onyx

./: .gitignore  CMakeLists.txt  CMakePresets.json  License.md  ReadMe.md
Docs/: Doxyfile
Docs/Pages/: Logging.md
Onyx/: CMakeLists.txt
Onyx/Editor/: CMakeLists.txt  Resources.aps  Resources.rc  main.cpp
Onyx/Engine/: CMakeLists.txt  Onyx.cpp  Onyx.h  Version.h  Version.h.in
Onyx/Engine/include/Onyx/: Onyx.h  Version.h  Version.h.in
Onyx/Engine/include/Onyx/Graphics/: Buffer.h  GPUDevice.h  Texture.h  Window.h
Onyx/Engine/include/Onyx/Graphics/Backends/: GPUDevice_Vulkan.h
Onyx/Engine/include/Onyx/Utility/: Logger.h  OnyxResult.h
Onyx/Engine/src/: Onyx.cpp
Onyx/Engine/src/Graphics/: Buffer.cpp  GPUDevice.cpp  Window.cpp
Onyx/Engine/src/Graphics/Backends/: GPUDevice_Vulkan.cpp  VMAImplementation.cpp
Onyx/Engine/src/Utility/: Logger.cpp
Onyx/Testbed/: App.cpp  App.h  CMakeLists.txt  Resources.aps  Resources.rc  main.cpp
Onyx/Testbed/android/app/src/main/: AndroidManifest.xml
Onyx/Testbed/android/app/src/main/cpp/: CMakeLists.txt
Onyx/Testbed/android/app/src/main/java/com/ewanburnett/onyx/testbed/: MainActivity.java
Onyx/Testbed/android/gradle/: libs.versions.toml
Onyx/Testbed/android/gradle/wrapper/: gradle-wrapper.properties
Onyx/Tests/: CMakeLists.txt  main.cpp
enc_temp_folder/33f16abbf628cce4b5a64b4159010dd/: GPUDevice_Vulkan.cpp
